== Next version

* Variables that should be accessible from outside the model can now easily be created by calling "variable_name_is_a variable" where "variable_name" is the desired name of the variable and "variable" is the variable (e.g. "int_var(17)"). Take a look at the examples to see it in action.

== Version 0.8.3 
This release adds regular expression constraints, the last channel
constraint and various minor convenience improvements. It also fixes a
rather serious bug that occurs when using the latest patchlevels of Ruby
1.8.6. 

* [#20888] Fixed a GC bug causing problems with Ruby 1.8.6 at patchlevels around 230.
* Boolean constraints can no longer be specified using the form "bool.must == true". Only the "bool.must_be.true" form can now be used.
* Added constants in Model that contain the limits of the variables' domains.
* The domain when construction arrays and matrices of int variables now default to the same as when creating single variables (the largest possible domain).
* Model#branch_on now accepts single variables as well as enums.
* Added channel constraints between single set variables and enumerations of boolean variables.
* Added integer and boolean regular expression constraints. Thanks goes to Eivind Eklund for providing the idea for the syntax used to specify the regular expressions.

== Version 0.8.2
This release adds search statistics along with some new arithmetic constraints 
and channel constraints between boolean and integer variables.

* Wrapping an enumerable that is already wrapped is no longer allowed.
* Added search statistics.
* Added squared value and square root constraints.
* Added channel constraints between single integer variables and boolean variables.
* Added channel constraints between enumerations of boolean variables and single integer variables.

== Version 0.8.1
This release adds tuple constraints along with a couple of minor features. It 
also fixes a bug introduced in the previous version.
