@@ -6,3 +6,4 @@ require 'gecoder/interface/search'
 require 'gecoder/interface/constraints'
 require 'gecoder/interface/enum_wrapper'
 require 'gecoder/interface/branch'
+require 'gecoder/interface/model_sugar'
